--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://zabery-backend.onrender.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
