--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@ffmpeg/ffmpeg": "^0.12.10",
-    "@fvilers/disable-react-devtools": "^1.3.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@react-oauth/google": "^0.12.1",
@@ -42,7 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://zabery-backend.onrender.com/",
+  "proxy": "http://localhost:4000/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -62,7 +60,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
   }
 }
